// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewTable::Table::HeaderCell displays the default cell 1`] = `
<td>
  <div>
    <div
      class="cell-wrapper cellWrapper"
    >
      <div>
        ACTIONS
      </div>
    </div>
  </div>
</td>
`;

exports[`ViewTable::Table::HeaderCell does not display ActionsComponent for non-main field cell 1`] = `
<td>
  <div>
    <div
      class="cell-wrapper cellWrapper"
    >
      <div
        class=""
      >
        <span
          class="field-title"
        >
          Subject
        </span>
      </div>
    </div>
  </div>
</td>
`;
